Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -538,9 +538,7 @@ summary {
 }
 details > summary
 { margin-left: 0 }
-details > dl, details > dd,
-details > ol li, details > ul li
-  { margin-left: 0 }
+
 nav details, nav summary {
   margin: 0;
   padding: 0;
